# Realtime-Content-Intelligence-Platform

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
scripts/: configure.sh  install_ngrok.sh
src/: main.py
src/api/: app.py  subscriptions.py
src/config/: logging.py  settings.py
src/database/: db.py  schemas.py
src/infra/terraform/: main.tf  output.tf  variables.tf
src/infra/terraform/modules/ec2/: main.tf  variables.tf
src/infra/terraform/modules/elastic_ip/: main.tf  output.tf  variables.tf
src/infra/terraform/modules/vpc/: main.tf  output.tf  variables.tf
src/webhook/: app.py  manager.py
src/worker/: transformer.py
